@@ -120,11 +120,19 @@ void Scheduler::handle_schedule(schedules::schedule_object item) {
 		NSCAPI::nagiosReturn code = nscapi::core_helper::simple_query(item.command.c_str(), item.arguments, response);
 		if (code == NSCAPI::returnIgnored) {
 			NSC_LOG_ERROR_STD(_T("Command was not found: ") + item.command.c_str());
+			if (item.channel.empty()) {
+				NSC_LOG_ERROR_STD(_T("No channel specified for ") + item.alias + _T(" mssage will not be sent."));
+				return;
+			}
 			//make_submit_from_query(response, item.channel, item.alias);
 			nscapi::functions::create_simple_submit_request(item.channel, item.command, NSCAPI::returnUNKNOWN, _T("Command was not found: ") + item.command, _T(""), response);
 			std::string result;
 			get_core()->submit_message(item.channel, response, result);
 		} else if (nscapi::report::matches(item.report, code)) {
+			if (item.channel.empty()) {
+				NSC_LOG_ERROR_STD(_T("No channel specified for ") + item.alias + _T(" mssage will not be sent."));
+				return;
+			}
 			// @todo: allow renaming of commands here item.alias, 
 			// @todo this is broken, fix this (uses the wrong message)
 			nscapi::functions::make_submit_from_query(response, item.channel, item.alias, item.target_id);
